# qodo-cover

./: .coveragerc  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
build_helpers/: README.md
cover_agent/: AICaller.py  AgentCompletionABC.py  CoverAgent.py  CoverageProcessor.py  CustomLogger.py  DefaultAgentCompletion.py  PromptBuilder.py  ReportGenerator.py  Runner.py  UnitTestDB.py  UnitTestGenerator.py  UnitTestValidator.py  agent_completion_abc.py  ai_caller.py  ai_caller_replay.py  constants.py  cover_agent.py  coverage_processor.py  custom_logger.py  default_agent_completion.py  main.py  main_full_repo.py  record_replay_manager.py  report_generator.py  runner.py  unit_test_db.py  unit_test_generator.py  unit_test_validator.py  utils.py
docs/: database_usage.md  top_level_sequence_diagram.md  usage_examples.md
stored_responses/: c_cli_responses_a8d19a85a2bf.yml  cpp_cli_responses_fa7bddecaf00.yml  csharp_webservice_responses_e2f8613e13a0.yml  go_webservice_responses_a304ffed9b66.yml  java_gradle_responses_3b9f8df90168.yml  java_spring_calculator_responses_8fa8103663ed.yml  js_vanilla_responses_22dcab135d5b.yml  python_fastapi_responses_a9d9de927a82.yml  react_calculator_responses_55dc635096e8.yml  ruby_sinatra_responses_45565837e1f3.yml  typescript_calculator_responses_59a42f4afe25.yml
tests/: test_AICaller.py  test_AgentCompletionABC.py  test_CoverAgent.py  test_CoverageProcessor.py  test_CustomLogger.py  test_DefaultAgentCompletion.py  test_FilePreprocessor.py  test_PromptBuilder.py  test_ReportGenerator.py  test_Runner.py  test_UnitTestDB.py  test_UnitTestGenerator.py  test_UnitTestValidator.py  test_agent_completion_abc.py  test_ai_caller.py  test_ai_caller_replay.py  test_config_schema.py  test_cover_agent.py  test_custom_logger.py  (+13 more)
(+44 files in other folders)
