[tool.poetry]
name = "cover-agent"
version = "0.0.0" # Placeholder. Will be replaced by dynamic versioning.
description = "Cover Agent Tool"
authors = ["QodoAI <tal.r@codium.ai>"]
license = "Apache 2.0"
readme = "README.md"

# Define where your Python package(s) are
packages = [
    { include = "cover_agent" }
]

[tool.poetry.dependencies]
python = ">=3.9.17,<3.14"
jinja2 = "^3.1.5"
beautifulsoup4 = "^4.13.3"
poetry-dynamic-versioning = "^1.7.1"
sqlalchemy = "^2.0.38"
diff-cover = "^9.2.3"
tenacity = "^9.0.0"
python-dotenv = "^1.1.0"

# Infrastructure Dependencies
docker = "^7.1.0"
boto3 = "^1.36.25"
google-cloud-aiplatform = "^1.81.0"

# LLM Dependencies
litellm = "^1.61.13"
openai = "^1.63.2"
tiktoken = "^0.8.0"
numpy = "^1.26.4"   # Note: Earlier version have incompatibility issues with google-cloud-aiplatform
dynaconf = "^3.2.10"
wandb = "^0.17.9"

# LSP Dependencies
grep_ast = "^0.3.3"
tree_sitter = "^0.21.3"
tree_sitter_languages = "^1.10.2"
jedi-language-server = "^0.41.4"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pyinstaller = "^6.12.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.8"
pytest-timeout = "^2.3.1"
fastapi = "^0.111.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
cover-agent = "cover_agent.main:main"
cover-agent-full-repo = "cover_agent.main_full_repo:main"
generate-report = "cover_agent.UnitTestDB:dump_to_report_cli"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.from-file]
source = "cover_agent/version.txt"
